Updated README.md to reflect the current state of the project